# good-vpn

./: .gitignore  ANDROID_SETUP_GUIDE.md  BUILD_GUIDE.md  BUILD_REPORT.md  CurrentStatus.md  FINAL_PHASE_COMPLETE.md  IMPLEMENTATION_SUCCESS.md  IOS_IMPLEMENTATION.md  IOS_SETUP_GUIDE.md  LINUX_SETUP_GUIDE.md  MACOS_IMPLEMENTATION.md  MACOS_SETUP_GUIDE.md  OPENVPN3_INTEGRATION_COMPLETE.md  OPENVPN_LIBRARIES.md  OPENVPN_RESTRUCTURE_SUMMARY.md  OPENVPN_SERVER_SETUP_COMPLETE.md  PLATFORM_BUILD_GUIDE.md  PLATFORM_IMPLEMENTATION.md  PROJECT_STATUS_SUMMARY.md  README.md  README_MACOS.md  SOURCE_TREE_RESTRUCTURE.md  TECHNICAL_SUMMARY.md  TESTING_MACOS.md  VPN_DEVELOPMENT_GUIDE.md  VPN_IP_DISPLAY_FIX.md  WINDOWS_SETUP_GUIDE.md  build_android.sh  build_ios.sh  build_macos.sh  build_macos_release.sh  build_project.sh  create_dmg.sh  pubspec.yaml  setup_macos_developer.sh  udp_forwarder.py
.github/workflows/: build_android.yml
android/: gradle.properties
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  android_compat.cpp  openvpn3_wrapper.cpp  openvpn3_wrapper.h  openvpn_client.cpp  openvpn_client.h  openvpn_jni.cpp
android/app/src/main/cpp/asio/asio/include/: asio.hpp
android/app/src/main/cpp/openssl/: opensslconf.h
android/app/src/main/cpp/openvpn/: openvpn_jni.cpp
android/app/src/main/cpp/openvpn3/: openvpn_client.hpp
android/app/src/main/kotlin/com/example/fl_openvpn_client/: MainActivity.kt  OpenVpnNative.kt  OpenVpnService.kt  VpnServiceManager.kt
ios/: build_openvpn.sh
ios/Runner/: AppDelegate.swift  Info.plist  IosVpnManager.swift  Runner.entitlements  VpnManager.swift  openvpn_wrapper.cpp
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/openvpn/: openvpn_client.hpp
lib/: main.dart
lib/models/: vpn_config.dart  vpn_status.dart
lib/providers/: vpn_provider.dart
lib/screens/: about_screen.dart  config_screen.dart  home_screen.dart
lib/services/: openvpn_service.dart  vpn_service.dart
lib/utils/: config_parser.dart  sample_configs.dart  storage_helper.dart
lib/widgets/: auth_dialog.dart  connection_status_widget.dart  server_list_widget.dart
linux/: CMakeLists.txt  vpn_plugin.cc  vpn_plugin.h
linux/runner/: main.cc  my_application.cc
macos/: CMakeLists.txt  build_openvpn.sh
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: DebugProfile.entitlements  MacVpnManager.swift  MainFlutterWindow.swift  OpenVPNMacWrapper.cpp  OpenVPNMacWrapper.h  Release.entitlements  Runner.entitlements  openvpn_c_wrapper.cpp
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
macos/Runner/openvpn/: macos_tun_builder.h
openvpn/: .gitignore  CMakeLists.txt  README.md  build_android.sh  build_dependencies.sh  build_ios.sh  build_macos.sh  macos_tun_builder.cpp  openvpn3_compat.h  openvpn3_wrapper.cpp  openvpn3_wrapper.h  openvpn_client.cpp
sample_configs/: corporate_vpn.ovpn  sample_server.ovpn  vm01.ovpn  vm02.ovpn
scripts/: build.sh  build_with_openvpn.sh  final_verification.sh  manage_vm_openvpn.sh  quick_test_openvpn.sh  setup_openvpn_libs.sh  test_config_import.sh  test_file_import_fixed.sh  test_real_connection.sh  test_real_openvpn3.sh  test_real_openvpn_connection.sh  test_vm_openvpn_server.sh  verify_openvpn3_integration.sh
test/: vpn_config_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/libs/openssl/include/openssl/: opensslconf.h
windows/libs/openvpn/: openvpn.h
windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp  openvpn3_wrapper_win.cpp  openvpn3_wrapper_win.h  openvpn_client_win.cpp  openvpn_client_win.h  vpn_plugin.cpp  vpn_plugin.h
